fix:update logic in getting top rated and view story, in read chapter